@@ -1,7 +1,7 @@
 Package: Pigengene
 Type: Package
 Title: Infers biological signatures from gene expression data
-Version: 1.9.22
+Version: 1.9.24
 Date: 2016-03-31
 Author: Habil Zare, Amir Foroushani, and Rupesh Agrahari
 Maintainer: Habil Zare <zare@u.washington.edu>
